# toml.wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  createMJS.js  package.json  types.d.ts  updatePackage.json.js
.github/workflows/: ci.yml  release.yml
scripts/: createMJS.js  patchBrowser.js  patchCJS.js  supportPassingBuffer.js  updateCargoVersion.js  updatePackageExports.js
src/: lib.rs
tests/: cjs.js  deno.ts  esm.mjs  input.toml  output.json
