[dependencies]
toml = "0.5.8"

[dependencies.wasm-bindgen]
features = ["serde-serialize"]
version = "0.2.69"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[package]
authors = [
    "Antoine du Hamel <duhamelantoine199@gmail.com>",
    "Pascal Seitz <pascal.seitz@sap.com>",
]
edition = "2018"
name = "toml2js"
version = "0.4.0"
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
[profile.release]
opt-level = "z"
